<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jalberssonplazas.radiobutton.inicioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo" />
    <RadioGroup
        android:id="@+id/rgPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv"
            />
        <RadioButton
            android:id="@+id/rbRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio"
            />

    </RadioGroup>
    <TextView
        android:id="@+id/txtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <CheckBox
        android:id="@+id/chbDescuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des"
        />
    <TextView
        android:id="@+id/txtDescuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        />
    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>
